--- a/index.html
+++ b/index.html
@@ -13,32 +13,13 @@
 </head>
 
 <body>
-    <!-- <nav>
-        <div class="nav-wrapper">
-            <a href="index.html">Home</a>
-            <ul id="nav-mobile" class="left hide-on-med-and-down">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#"><span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">My Projects</a>
-                </li>
-            </ul>
-        </div>
-    </nav> -->
+
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#">Olga Sadova</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#"><span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
@@ -64,7 +45,7 @@
                     <div class="col s9">
                         <span class="black-text">
                         <h4>About Me!</h4>
-                        <em> <p>Hi, I'm Olga! I live in Redmond, WA after moving overseas from Kiev, Ukraine. I graduated from The Kiev Politechnic University with a degree in Metallurgy (Process Engineer) and now  I am learning web development from the UW Coding Boot Camp.  
+                        <em> <p>Hi, I'm Olga! I live in Redmond, WA after moving from Kiev, Ukraine. I graduated from The Kiev Politechnic University with a degree in Metallurgy (Process Engineer) and now  I am learning web development from the UW Coding Boot Camp.  
                         I love all kinds of music! I can listen it all day! I enjoy nature and just being outside and taking in the scenery, which made moving to Redmond an easy move. </p></em>
                         
                       </span>
